--- a/HW.html
+++ b/HW.html
@@ -234,7 +234,7 @@ $(document).ready(function () {
 <td align="left">2018-02-11</td>
 </tr>
 <tr class="odd">
-<td align="left">HW5</td>
+<td align="left"><a href="HW5.html">HW5: Externa data</a></td>
 <td align="left">2018-02-18</td>
 </tr>
 <tr class="even">
