--- a/day12.html
+++ b/day12.html
@@ -216,6 +216,7 @@ $(document).ready(function () {
 <div id="gor-detta-innan-lektion" class="section level2">
 <h2>Gör detta innan lektion</h2>
 <p>Lös kapitlen <em>A quick refresher</em> och <em>When and how you should write a function</em> på <a href="https://www.datacamp.com/groups/statistisk-databehandling-vt18">DataCamp</a>.</p>
+<p>Läs <a href="http://r4ds.had.co.nz/">R4DS</a> kapitel 19, 20.1-20.4.</p>
 </div>
 <div id="under-lektion" class="section level2">
 <h2>Under lektion</h2>
