--- a/day13.html
+++ b/day13.html
@@ -216,6 +216,7 @@ $(document).ready(function () {
 <div id="gor-detta-innan-lektion" class="section level2">
 <h2>Gör detta innan lektion</h2>
 <p>Lös kapitlen <em>Functional programming</em> och <em>Advanced inputs and outputs</em> på <a href="https://www.datacamp.com/groups/statistisk-databehandling-vt18">DataCamp</a>.</p>
+<p>Läs <a href="http://r4ds.had.co.nz/">R4DS</a> kapitel 20.5-20.7, 21.</p>
 </div>
 <div id="under-lektion" class="section level2">
 <h2>Under lektion</h2>
