--- a/day12.html
+++ b/day12.html
@@ -20,8 +20,8 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -30,10 +30,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -230,7 +232,11 @@ $(document).ready(function () {
 <li>Simulera ett stort antal <span class="math inline">\(x_1,\ldots, x_N\)</span> likformigt fördelade slumptal på <span class="math inline">\((a, b)\)</span>.</li>
 <li>Bestäm <span class="math inline">\(I=(b-a)\sum_{i=1}^N f(x_i)/N\)</span>.</li>
 </ol>
-<p>Enligt Stora talens lag konvergerar <span class="math inline">\(I\)</span> mot <span class="math inline">\(\int_{a}^bf(x)\,dx\)</span> då <span class="math inline">\(N\rightarrow\infty\)</span> och kan därför ses som en numerisk approximation av integralen. Skriv en funktion som tar <span class="math inline">\(f\)</span>, <span class="math inline">\(a\)</span>, <span class="math inline">\(b\)</span>, <span class="math inline">\(N\)</span> som indata och returnerar <span class="math inline">\(I\)</span>.</p>
+<p>Enligt Stora talens lag konvergerar <span class="math inline">\(I\)</span> mot <span class="math inline">\(\int_{a}^bf(x)\,dx\)</span> då <span class="math inline">\(N\rightarrow\infty\)</span> och kan därför ses som en numerisk approximation av integralen.</p>
+<ul>
+<li>Skriv en funktion <code>MC_int</code>som tar <span class="math inline">\(f\)</span>, <span class="math inline">\(a\)</span>, <span class="math inline">\(b\)</span>, <span class="math inline">\(N\)</span> som indata och returnerar <span class="math inline">\(I\)</span>.</li>
+<li>Generalisera funktionen med <code>...</code> så att t.ex. <code>MC_int(dnorm, 0, 1, 10000, mean = 1, sd = 2)</code> integrerar tätheten för en <span class="math inline">\(N(1, 2^2)\)</span>-fördelning.</li>
+</ul>
 </div>
 </div>
 
