Added SQL cheat sheet

--- a/schedule.html
+++ b/schedule.html
@@ -284,7 +284,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left">torsdag, 2018-02-22</td>
 <td align="left">12:45-15:30</td>
-<td align="left">Presenting: Principles of visualisation.</td>
+<td align="left"><a href="dat14.html">Presenting: Principles of visualisation.</a></td>
 </tr>
 <tr class="odd">
 <td align="left">tisdag, 2018-02-27</td>
