updated exam html

--- a/exam.html
+++ b/exam.html
@@ -214,8 +214,9 @@ $(document).ready(function () {
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf">Data Transformation Cheat Sheet</a></li>
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-import.pdf">Data Import Cheat Sheet</a></li>
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/strings.pdf">Working with Strings Cheat Sheet</a></li>
+<li><a href="http://files.zeroturnaround.com/pdf/zt_sql_cheat_sheet.pdf">SQL Cheat Sheet</a></li>
 </ul>
-<p>som delas ut i samband med tentamen. Utöver dessa kommer även ett SQL Cheat Sheet delas ut.</p>
+<p>som delas ut i samband med tentamen.</p>
 <p>Följande R-paket kommer vara tillgängliga: <code>tidyverse</code> (t.ex. <code>dplyr</code>, <code>tidyr</code>, <code>readr</code>, <code>tidyr</code>, <code>stringr</code>), <code>rmarkdown</code>, <code>knitr</code>, <code>DBI</code>, <code>rsqlite</code>, <code>rebus</code>, <code>jsonlite</code>, <code>listviewer</code>, <code>xml2</code>.</p>
 
 
